--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,5 @@
 {port_env, [
+    {"CFLAGS", "-I/usr/local/include/ -DAPI3"},
     {"DRV_LDFLAGS", "-lcouchbase -shared $ERL_LDFLAGS"},
     {"darwin", "DRV_LDFLAGS", "-lcouchbase -bundle -flat_namespace -undefined suppress $ERL_LDFLAGS"},
     {"DRV_CFLAGS", "-Ic_src -g -Wall -fPIC $ERL_CFLAGS"}
